--- a/socketio-chat/server/.env.development
+++ b/socketio-chat/server/.env.development
@@ -1,6 +1,9 @@
 # Database
 MONGO_URI=mongodb://localhost:27017/socketioChat
 
+# MongoDB Atlas
+MONGODB_URI=mongodb+srv://jkarranja:97245439J%40k@cluster0.kpskdyg.mongodb.net/socketioChart?retryWrites=true&w=majority&appName=Cluster0
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
