--- a/socketio-chat/client/.env.development
+++ b/socketio-chat/client/.env.development
@@ -1,5 +1,6 @@
 # API Configuration
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5000/api
+VITE_SERVER_URL=http://localhost:5000
 
 # Debug Flags
 VITE_DEBUG=true
