--- a/socketio-chat/server/package.json
+++ b/socketio-chat/server/package.json
@@ -10,6 +10,7 @@
     "build": "cd client && npm run build",
     "lint": "eslint . --ext .js,.jsx",
     "format": "prettier --write .",
+    "seed:production": "node seed-db-render.js",
     "start:test": "echo \"Use 'npm test' instead\" && exit 1",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit --runInBand --testTimeout=30000",
     "test:watch": "cross-env NODE_ENV=test jest --watch --detectOpenHandles --runInBand --testTimeout=30000",
